<resources>
    <string name="app_name">PC2-20100835-21200055</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="tvingreso">Ingreso</string>
    <string name="etdescripcion">Descripcion</string>
    <string name="tvmonto">Monto</string>
    <string name="etmonto">Ingrese el monto</string>
    <string name="btsubir">Subir</string>
    <string name="tvgasto">Gasto</string>
</resources>